# healthmaster

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
.github/workflows/: rust.yml
migrations/: 0001_create_health_checks.sql
src/: app.rs  clickhouse.rs  config.rs  health_checker.rs  lib.rs  main.rs  telegram.rs
tests/: config_loading.rs
